--- a/examples/COVID19_India.ipynb
+++ b/examples/COVID19_India.ipynb
@@ -110,9 +110,8 @@
     "from bokeh.plotting import figure\n",
     "from bokeh.palettes import brewer, OrRd\n",
     "from bokeh.plotting import show as plt_show\n",
-    "from bokeh.tile_providers import Vendors, get_provider\n",
+    "from bokeh.models.layouts import Column as column\n",
     "from bokeh.io import output_notebook, show, output_file\n",
-    "from bokeh.layouts import widgetbox, row, column, gridplot\n",
     "from bokeh.models import GeoJSONDataSource, LinearColorMapper, ColorBar, NumeralTickFormatter\n",
     "from bokeh.models import Slider, HoverTool, Select, Div, Range1d, WMTSTileSource, BoxZoomTool"
    ]
@@ -452,7 +451,7 @@
     "               x_range=(xmin, xmax) if map_overlay else None,\n",
     "               y_range=(ymin, ymax) if map_overlay else None,\n",
     "               tools='save' if enable_toolbar else '', \n",
-    "               plot_height = 640, plot_width = 640,\n",
+    "               outer_height = 640, outer_width = 640,\n",
     "               toolbar_location = 'left' if enable_toolbar else None,\n",
     "               #lod_factor=int(1e7),\n",
     "               #lod_threshold=int(2),\n",
@@ -572,8 +571,8 @@
     "id": "1vyhAcNAg7sA"
    },
    "source": [
-    "## [Heroku hosted app](https://covid19india-visualization.herokuapp.com/COVID19_India)\n",
-    "The iframe displays a web version of this notebook, using Heroku."
+    "## [Web hosted app](https://moad.computer/app/India_COVID19.html)\n",
+    "The iframe displays a hosted web version of this notebook."
    ]
   },
   {
@@ -587,7 +586,7 @@
    "outputs": [],
    "source": [
     "import IPython\n",
-    "URL = 'https://covid19india-visualization.herokuapp.com/COVID19_India'\n",
+    "URL = 'https://moad.computer/app/India_COVID19.html'\n",
     "FRAME_WIDTH=680\n",
     "FRAME_HEIGHT=680\n",
     "iframe = '<iframe src={} width={} height={}></iframe>'.format(URL, \n",
@@ -615,7 +614,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -629,9 +628,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
