Updated example notebook ...

--- a/examples/Visualizing_India_COVID19_vaccination_progress.ipynb
+++ b/examples/Visualizing_India_COVID19_vaccination_progress.ipynb
@@ -262,7 +262,7 @@
    },
    "outputs": [],
    "source": [
-    "REPO_URL = 'https://github.com/MoadComputer/covid19-visualization/raw/main/data'\n",
+    "REPO_URL = 'https://raw.githubusercontent.com/MoadComputer/covid19-visualization/main/data'\n",
     "\n",
     "India_statewise = geopandas.read_file(\n",
     "  f'{REPO_URL}/GeoJSON_assets/India.geojson')\n",
