--- a/examples/COVID19_India.ipynb
+++ b/examples/COVID19_India.ipynb
@@ -280,7 +280,7 @@
    },
    "source": [
     "## Load COVID19 India data\n",
-    "The COVID19 data is aggregated from the [Ministry of Health and Family Welfare, Government of India](https://www.mohfw.gov.in/#state-data) website."
+    "The COVID19 data is aggregated from the [Ministry of Health and Family Welfare, Government of India](https://covid19dashboard.mohfw.gov.in/) website."
    ]
   },
   {
