Updated SARS-CoV2 case statistics visualization notebook ...

--- a/examples/COVID19_India.ipynb
+++ b/examples/COVID19_India.ipynb
@@ -592,7 +592,7 @@
     "iframe = '<iframe src={} width={} height={}></iframe>'.format(URL, \n",
     "                                                              FRAME_WIDTH, \n",
     "                                                              FRAME_HEIGHT)\n",
-    "IPython.display.HTML(iframe)"
+    "IPython.display.Iframe(iframe)"
    ]
   },
   {
