Updated SARS-CoV2 case statistics visualization notebook ...

--- a/examples/COVID19_India.ipynb
+++ b/examples/COVID19_India.ipynb
@@ -514,10 +514,12 @@
    },
    "outputs": [],
    "source": [
-    "_covid19_plot = covid19_plot(covid19_geosource, \n",
-    "                             input_df=covid19_data,\n",
-    "                             input_field='deaths',\n",
-    "                             plot_title=plot_title)"
+    "india_covid19_plot = covid19_plot(\n",
+    "                       covid19_geosource, \n",
+    "                       input_df=covid19_data,\n",
+    "                       input_field='deaths',\n",
+    "                       plot_title=plot_title\n",
+    "                     )"
    ]
   },
   {
@@ -531,7 +533,7 @@
    "outputs": [],
    "source": [
     "curdoc().title=app_title\n",
-    "covid19_layout = column(_covid19_plot)\n",
+    "covid19_layout = column(india_covid19_plot)\n",
     "curdoc().add_root(covid19_layout)"
    ]
   },
@@ -561,7 +563,7 @@
    "outputs": [],
    "source": [
     "output_notebook()\n",
-    "show(_covid19_plot)"
+    "show(india_covid19_plot)"
    ]
   },
   {
@@ -587,12 +589,8 @@
    "source": [
     "import IPython\n",
     "URL = 'https://moad.computer/app/India_COVID19.html'\n",
-    "FRAME_WIDTH=680\n",
-    "FRAME_HEIGHT=680\n",
-    "iframe = '<iframe src={} width={} height={}></iframe>'.format(URL, \n",
-    "                                                              FRAME_WIDTH, \n",
-    "                                                              FRAME_HEIGHT)\n",
-    "IPython.display.Iframe(iframe)"
+    "FRAME_WIDTH, FRAME_HEIGHT = 680, 680\n",
+    "IPython.display.IFrame(URL, width=FRAME_WIDTH, height=FRAME_HEIGHT)"
    ]
   },
   {
