Updated SARS-CoV2 case statistics interactive visualization notebook ...

--- a/examples/Interactive_visualization_of_COVID19_in_India.ipynb
+++ b/examples/Interactive_visualization_of_COVID19_in_India.ipynb
@@ -622,8 +622,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# out_file('India_COVID19.html')\n",
-    "# save(basic_covid19_layout)"
+    "out_file('India_COVID19.html')\n",
+    "save(basic_covid19_layout)"
    ]
   },
   {
