Updated SARS-CoV2 interactive visualiztion notebook ...

--- a/examples/Interactive_visualization_of_COVID19_in_India.ipynb
+++ b/examples/Interactive_visualization_of_COVID19_in_India.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "# Tips to understand the dashboard data summary:\n",
-    "The key statistics tracked here is the **total number of cases** over the reporting period, starting from **1st January, 2025** till **11th November, 2025** and not the currently active cases.\n",
+    "The key statistics tracked here is the **total number of cases** over the reporting period, starting from **1st January, 2025** till **27th November, 2025** and not the currently active cases.\n",
     "## **Formula for computation of total cases:**\n",
     "${{Total}_{cases}={Active Cases}+{Cases}_{Cured/Discharged/Migrated}+{Deaths}}$"
    ]
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_UPDATE_DATE = '11-November-2025'\n",
+    "DATA_UPDATE_DATE = '27-November-2025'\n",
     "DATA_URL = 'https://raw.githubusercontent.com/MoadComputer/covid19-visualization/main/data'"
    ]
   },
@@ -63,6 +63,7 @@
     "       numpy as np, pandas as pd\n",
     "\n",
     "from packaging import version\n",
+    "from urllib.request import URLError\n",
     "from bokeh.io.doc import curdoc\n",
     "from bokeh.layouts import layout\n",
     "from bokeh.models.glyphs import Text\n",
@@ -128,7 +129,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "India_statewise = geopandas.read_file(f'{DATA_URL}/GeoJSON_assets/India_statewise.geojson')"
+    "try:\n",
+    "    India_statewise = geopandas.read_file(f'{DATA_URL}/GeoJSON_assets/India_statewise.geojson')\n",
+    "except URLError:\n",
+    "    India_statewise = geopandas.read_file('../data/GeoJSON_assets/India_statewise.geojson')"
    ]
   },
   {
@@ -222,7 +226,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "covid19_data = pd.read_csv(f'{DATA_URL}/Coronavirus_stats/India/COVID19_India_statewise.csv')"
+    "try:\n",
+    "    covid19_data = pd.read_csv(f'{DATA_URL}/Coronavirus_stats/India/COVID19_India_statewise.csv')\n",
+    "except URLError:\n",
+    "    covid19_data = pd.read_csv('../data/Coronavirus_stats/India/COVID19_India_statewise.csv')"
    ]
   },
   {
@@ -362,7 +369,7 @@
     "      colorMode='', \n",
     "      hoverTool=None,\n",
     "      mapOverlay=True, \n",
-    "      enableTapTool=False, \n",
+    "      enableTapTool=True, \n",
     "      enableToolbar=True\n",
     "):\n",
     "  if mapOverlay:\n",
@@ -381,9 +388,10 @@
     "    fill_color={'field'     : colorMode, \n",
     "                'transform' : colorMapper},\n",
     "    line_color='purple', \n",
-    "    line_width=0.5, \n",
-    "    fill_alpha=0.60 if enableTapTool else 0.65,\n",
-    "    nonselection_alpha=0.65\n",
+    "    line_width=0.05, \n",
+    "    fill_alpha=0.1 if enableTapTool else 0.05,\n",
+    "    nonselection_alpha=0.1,\n",
+    "    hover_fill_alpha=0.65,  \n",
     "  )\n",
     "  plt.add_layout(colorBar, 'right')\n",
     "  plt.add_tools(hoverTool)\n",
@@ -395,7 +403,14 @@
     "    plt.title.text_font_size = '30pt'\n",
     "  return plt\n",
     "\n",
-    "def lakshadweep_correction(plt, input_df=None):\n",
+    "def lakshadweep_correction(\n",
+    "    plt, \n",
+    "    input_df=None,\n",
+    "    geosourceJson=None, \n",
+    "    colorBar=None,\n",
+    "    colorMapper=None,\n",
+    "    colorMode=None\n",
+    "    ):\n",
     "  source = ColumnDataSource(\n",
     "             data=dict(\n",
     "                    x=[8075000], \n",
@@ -416,10 +431,14 @@
     "    y='y', \n",
     "    size=25, \n",
     "    source=source,\n",
-    "    line_color='purple', \n",
-    "    color='blue',\n",
-    "    fill_alpha=0.075, \n",
-    "    nonselection_alpha=0.20\n",
+    "    line_color='purple',\n",
+    "    line_width=0.05,  \n",
+    "    #color='blue',\n",
+    "    fill_alpha=0.05, \n",
+    "    fill_color={'field'     : colorMode, \n",
+    "                'transform' : colorMapper},  \n",
+    "    nonselection_alpha=0.1,\n",
+    "    hover_fill_alpha=0.65,   \n",
     "  )\n",
     "  return plt\n",
     "\n",
@@ -464,8 +483,9 @@
     "    color=\"#CAB2D6\", \n",
     "    source=source, \n",
     "    line_color='purple',\n",
+    "    line_width=0.01,  \n",
     "    #width_units='screen', height_units='screen',\n",
-    "    fill_alpha=0.25\n",
+    "    fill_alpha=0.1\n",
     "  )\n",
     "  return plt\n",
     "\n",
@@ -537,11 +557,15 @@
     "          hoverTool=hover, \n",
     "          mapOverlay=map_overlay, \n",
     "          enableToolbar=enable_toolbar,\n",
-    "          enableTapTool=False\n",
+    "          enableTapTool=True\n",
     "        )\n",
     "  \n",
     "  if enable_LakshadweepStats:\n",
-    "    plt = lakshadweep_correction(plt, input_df=input_df)\n",
+    "    plt = lakshadweep_correction(plt, input_df=input_df,\n",
+    "            geosourceJson=covid19_geosource,\n",
+    "          colorBar=color_bar, \n",
+    "          colorMapper=color_mapper, \n",
+    "          colorMode=input_field)\n",
     "\n",
     "  if enable_IndiaStats:\n",
     "    xtext, ytext, xbox, ybox = CustomTitleFormatter()\n",
