Updated SARS-CoV2 interactive visualiztion plots ...

--- a/examples/Interactive_visualization_of_COVID19_in_India.ipynb
+++ b/examples/Interactive_visualization_of_COVID19_in_India.ipynb
@@ -561,11 +561,14 @@
     "        )\n",
     "  \n",
     "  if enable_LakshadweepStats:\n",
-    "    plt = lakshadweep_correction(plt, input_df=input_df,\n",
-    "            geosourceJson=covid19_geosource,\n",
-    "          colorBar=color_bar, \n",
-    "          colorMapper=color_mapper, \n",
-    "          colorMode=input_field)\n",
+    "    plt = lakshadweep_correction(\n",
+    "      plt, \n",
+    "      input_df=input_df,\n",
+    "      geosourceJson=covid19_geosource,\n",
+    "      colorBar=color_bar, \n",
+    "      colorMapper=color_mapper, \n",
+    "      colorMode=input_field\n",
+    "    )\n",
     "\n",
     "  if enable_IndiaStats:\n",
     "    xtext, ytext, xbox, ybox = CustomTitleFormatter()\n",
