Updated SARS-CoV2 improved visualiztions for union territory statistics ...

--- a/examples/Interactive_visualization_of_COVID19_in_India.ipynb
+++ b/examples/Interactive_visualization_of_COVID19_in_India.ipynb
@@ -257,6 +257,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xx, yy = np.array(India_statewise[India_statewise['state'] == 'Dadra and Nagar Haveli and Daman and Diu']['geometry'])[0].exterior.coords.xy\n",
+    "print(np.mean(xx), np.mean(yy))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -306,6 +316,47 @@
    "outputs": [],
    "source": [
     "merged_data['data_frame'].plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_multi_polygon_to_list(state, input_df):\n",
+    "    polygon_arr = np.array(input_df[input_df['state'] == state]['geometry'])\n",
+    "    return list(polygon_arr[0].geoms)\n",
+    "\n",
+    "def update_polygon_geojson_dataframe(state, input_df):\n",
+    "    polygon_list = convert_multi_polygon_to_list(state, input_df)\n",
+    "    print(f'Number of polygons from Multipolygon for: {state}: ', len(polygon_list))\n",
+    "    for p_idx, polygon in enumerate(polygon_list):\n",
+    "        if p_idx == 0:\n",
+    "            input_df.loc[input_df['state'] == state,'geometry'] = polygon\n",
+    "        else:\n",
+    "            input_df.loc[len(input_df) + 1] = [state, polygon]\n",
+    "    return input_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state = 'Puducherry'\n",
+    "India_statewise = update_polygon_geojson_dataframe(state, India_statewise)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state = 'Andaman and Nicobar Islands'\n",
+    "India_statewise = update_polygon_geojson_dataframe(state, India_statewise)"
    ]
   },
   {
@@ -371,7 +422,7 @@
     "      mapOverlay=True, \n",
     "      enableTapTool=True, \n",
     "      enableToolbar=True\n",
-    "):\n",
+    "    ):\n",
     "  if mapOverlay:\n",
     "    wmts = WMTSTileSource(url=\"https://c.tile.openstreetmap.org/{Z}/{X}/{Y}.png\")\n",
     "    plt.add_tile(wmts)\n",
@@ -404,17 +455,21 @@
     "  return plt\n",
     "\n",
     "def lakshadweep_correction(\n",
-    "    plt, \n",
-    "    input_df=None,\n",
-    "    geosourceJson=None, \n",
-    "    colorBar=None,\n",
-    "    colorMapper=None,\n",
-    "    colorMode=None\n",
+    "      plt, \n",
+    "      input_df=None,\n",
+    "      geosourceJson=None, \n",
+    "      colorBar=None,\n",
+    "      colorMapper=None,\n",
+    "      colorMode=None\n",
     "    ):\n",
+    "  xx, yy = np.array(India_statewise[India_statewise['state'] == 'Lakshadweep']['geometry'])[0].exterior.coords.xy\n",
+    "\n",
     "  source = ColumnDataSource(\n",
     "             data=dict(\n",
-    "                    x=[8075000], \n",
-    "                    y=[1250000], \n",
+    "                    #x=[8075000], \n",
+    "                    #y=[1250000],\n",
+    "                    x=[np.mean(xx)],\n",
+    "                    y=[np.mean(yy)],\n",
     "                    state=['Lakshadweep'],\n",
     "                    total_cases=[input_df.loc[input_df['state']=='Lakshadweep','total_cases']],\n",
     "                    deaths=[input_df.loc[input_df['state']=='Lakshadweep','deaths']]\n",
@@ -431,14 +486,57 @@
     "    y='y', \n",
     "    size=25, \n",
     "    source=source,\n",
-    "    line_color='purple',\n",
-    "    line_width=0.05,  \n",
+    "    line_color='blue',\n",
+    "    line_width=0.125,  \n",
     "    #color='blue',\n",
     "    fill_alpha=0.05, \n",
     "    fill_color={'field'     : colorMode, \n",
     "                'transform' : colorMapper},  \n",
     "    nonselection_alpha=0.1,\n",
-    "    hover_fill_alpha=0.65,   \n",
+    "    hover_fill_alpha=0.15,   \n",
+    "  )\n",
+    "  return plt\n",
+    "\n",
+    "def union_territory_correction(\n",
+    "      plt,\n",
+    "      state=None,\n",
+    "      idx=None,  \n",
+    "      input_df=None,\n",
+    "      geosourceJson=None, \n",
+    "      colorBar=None,\n",
+    "      colorMapper=None,\n",
+    "      colorMode=None\n",
+    "    ):\n",
+    "  xx, yy = np.array(India_statewise[India_statewise['state'] == state]['geometry'])[idx].exterior.coords.xy\n",
+    "\n",
+    "  source = ColumnDataSource(\n",
+    "             data=dict(\n",
+    "                    x=[np.mean(xx)],\n",
+    "                    y=[np.mean(yy)],\n",
+    "                    state=[state],\n",
+    "                    total_cases=[input_df.loc[input_df['state']==state,'total_cases']],\n",
+    "                    deaths=[input_df.loc[input_df['state']==state,'deaths']]\n",
+    "                  )\n",
+    "           )\n",
+    "\n",
+    "  if version_check:\n",
+    "    plot_circle = plt.scatter\n",
+    "  else:\n",
+    "    plot_circle = plt.circle\n",
+    "\n",
+    "  plot_circle(\n",
+    "    x='x', \n",
+    "    y='y', \n",
+    "    size=25, \n",
+    "    source=source,\n",
+    "    line_color='blue',\n",
+    "    line_width=0.25,  \n",
+    "    #color='blue',\n",
+    "    fill_alpha=0.05, \n",
+    "    fill_color={'field'     : colorMode, \n",
+    "                'transform' : colorMapper},  \n",
+    "    nonselection_alpha=0.1,\n",
+    "    hover_fill_alpha=0.15,   \n",
     "  )\n",
     "  return plt\n",
     "\n",
@@ -500,7 +598,7 @@
     "      palette_type='OrRd', \n",
     "      integer_plot=False,\n",
     "      custom_hovertool=True, \n",
-    "      enable_LakshadweepStats=True,\n",
+    "      enable_union_territory_stats=True,\n",
     "      enable_IndiaStats=False, \n",
     "      enable_toolbar=False\n",
     "):\n",
@@ -560,15 +658,88 @@
     "          enableTapTool=True\n",
     "        )\n",
     "  \n",
-    "  if enable_LakshadweepStats:\n",
-    "    plt = lakshadweep_correction(\n",
-    "      plt, \n",
+    "  if enable_union_territory_stats:\n",
+    "\n",
+    "\n",
+    "    for i in range(8):\n",
+    "      plt = union_territory_correction(\n",
+    "        plt,\n",
+    "        state='Andaman and Nicobar Islands',\n",
+    "        idx=i,\n",
+    "        input_df=input_df,\n",
+    "        geosourceJson=covid19_geosource,\n",
+    "        colorBar=color_bar, \n",
+    "        colorMapper=color_mapper, \n",
+    "        colorMode=input_field\n",
+    "      )  \n",
+    "\n",
+    "    plt = union_territory_correction(\n",
+    "      plt,\n",
+    "      state='Chandigarh',\n",
+    "      idx=0,\n",
     "      input_df=input_df,\n",
     "      geosourceJson=covid19_geosource,\n",
     "      colorBar=color_bar, \n",
     "      colorMapper=color_mapper, \n",
     "      colorMode=input_field\n",
     "    )\n",
+    "\n",
+    "    for i in range(2):  \n",
+    "      plt = union_territory_correction(\n",
+    "        plt,\n",
+    "        state='Dadra and Nagar Haveli and Daman and Diu',\n",
+    "        idx=i,\n",
+    "        input_df=input_df,\n",
+    "        geosourceJson=covid19_geosource,\n",
+    "        colorBar=color_bar, \n",
+    "        colorMapper=color_mapper, \n",
+    "        colorMode=input_field\n",
+    "      )\n",
+    "\n",
+    "    plt = union_territory_correction(\n",
+    "      plt,\n",
+    "      state='Delhi',\n",
+    "      idx=0,\n",
+    "      input_df=input_df,\n",
+    "      geosourceJson=covid19_geosource,\n",
+    "      colorBar=color_bar, \n",
+    "      colorMapper=color_mapper, \n",
+    "      colorMode=input_field\n",
+    "    )\n",
+    "\n",
+    "    plt = union_territory_correction(\n",
+    "      plt,\n",
+    "      state='Chandigarh',\n",
+    "      idx=0,\n",
+    "      input_df=input_df,\n",
+    "      geosourceJson=covid19_geosource,\n",
+    "      colorBar=color_bar, \n",
+    "      colorMapper=color_mapper, \n",
+    "      colorMode=input_field\n",
+    "    )\n",
+    "\n",
+    "    plt = union_territory_correction(\n",
+    "      plt,\n",
+    "      state='Lakshadweep',\n",
+    "      idx=0,\n",
+    "      input_df=input_df,\n",
+    "      geosourceJson=covid19_geosource,\n",
+    "      colorBar=color_bar, \n",
+    "      colorMapper=color_mapper, \n",
+    "      colorMode=input_field\n",
+    "    )\n",
+    "\n",
+    "    for i in range(2):\n",
+    "      plt = union_territory_correction(\n",
+    "            plt,\n",
+    "            state='Puducherry',\n",
+    "            idx=i,\n",
+    "            input_df=input_df,\n",
+    "            geosourceJson=covid19_geosource,\n",
+    "            colorBar=color_bar, \n",
+    "            colorMapper=color_mapper, \n",
+    "            colorMode=input_field\n",
+    "          )\n",
     "\n",
     "  if enable_IndiaStats:\n",
     "    xtext, ytext, xbox, ybox = CustomTitleFormatter()\n",
