Updated SARS-CoV2 case forecasts for 23rd January 2026 ...

--- a/examples/Interactive_visualization_of_SARS_CoV2_in_India.ipynb
+++ b/examples/Interactive_visualization_of_SARS_CoV2_in_India.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [**Interactive visualization of SARS-CoV2 outbreak in India**](https://github.com/MoadComputer/covid19-visualization/blob/master/examples/COVID19_India.ipynb)\n",
+    "# [**Interactive visualization of SARS-CoV2 outbreak in India**](https://github.com/MoadComputer/covid19-visualization/blob/master/examples/India_SARS_CoV2.ipynb)\n",
     "## Author: [Dr. Rahul Remanan](https://www.linkedin.com/in/rahulremanan/), CEO [Moad Computer](https://moad.computer)\n",
     "### Contact: rahul@moad.computer"
    ]
@@ -16,7 +16,7 @@
     "This notebook creates an interactive visualization of the statewise SARS-CoV2 outbreak data in India using [GeoPandas](https://geopandas.org/) and [Bokeh](https://bokeh.org/).\n",
     "\n",
     "The daily statewise SARS-CoV2 infection data is obtained from the [Ministry of Health and Family Welfare, India website](https://mohfw.gov.in), and cached in the [GitHub repo of this visualization and forecasting project](https://github.com/MoadComputer/covid19-visualization/).\n",
-    "## **[Run this notebook in Google Colab](https://colab.research.google.com/github/MoadComputer/covid19-visualization/blob/master/examples/Interactive_visualization_of_COVID19_in_India.ipynb)**\n",
+    "## **[Run this notebook in Google Colab](https://colab.research.google.com/github/MoadComputer/covid19-visualization/blob/master/examples/Interactive_visualization_of_SARS_CoV2_in_India.ipynb)**\n",
     "\n",
     "**(Update: Between 5th July, 2024 and 30th May, 2025, this interactive dashboard was not updated on the SARS-CoV2 statewise case statistics from the [Indian government's ministry of health and family welfare website](https://covid19dashboard.mohfw.gov.in).)**\n",
     "\n",
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "# Tips to understand the dashboard data summary:\n",
-    "The key statistics tracked here is the **total number of cases** over the reporting period, starting from **1st January, 2025** till **27th November, 2025** and not the currently active cases.\n",
+    "The key statistics tracked here is the **total number of cases** over the reporting period, starting from **1st January, 2025** till **23rd January, 2026** and not the currently active cases.\n",
     "## **Formula for computation of total cases:**\n",
     "${{Total}_{cases}={Active Cases}+{Cases}_{Cured/Discharged/Migrated}+{Deaths}}$"
    ]
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_UPDATE_DATE = '27-November-2025'\n",
+    "DATA_UPDATE_DATE = '01-January-2026'\n",
     "DATA_URL = 'https://raw.githubusercontent.com/MoadComputer/covid19-visualization/main/data'"
    ]
   },
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "India_statewise = India_statewise.to_crs(\"EPSG:3395\")\n",
+    "India_statewise = India_statewise.to_crs('EPSG:3395')\n",
     "India_statewise.head()"
    ]
   },
@@ -227,9 +227,9 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    covid19_data = pd.read_csv(f'{DATA_URL}/Coronavirus_stats/India/COVID19_India_statewise.csv')\n",
+    "    sars_cov2_data = pd.read_csv(f'{DATA_URL}/Coronavirus_stats/India/India_SARS_CoV2_statewise.csv')\n",
     "except URLError:\n",
-    "    covid19_data = pd.read_csv('../data/Coronavirus_stats/India/COVID19_India_statewise.csv')"
+    "    sars_cov2_data = pd.read_csv('../data/Coronavirus_stats/India/India_SARS_CoV2_statewise.csv')"
    ]
   },
   {
@@ -238,8 +238,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "covid19_data = apply_corrections(covid19_data)\n",
-    "covid19_data.head()"
+    "sars_cov2_data = apply_corrections(sars_cov2_data)\n",
+    "sars_cov2_data.head()"
    ]
   },
   {
@@ -248,12 +248,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "noCOVID19_list = list(set(list(India_statewise.state.values)) -set(list(covid19_data.state)))\n",
-    "print('A total of: {} states with no reports of COVID19 ...'.format(len(noCOVID19_list)))\n",
-    "if len(noCOVID19_list)>=1:\n",
-    "  print('\\nStates in India with no COVID19 reports:')  \n",
-    "  for noCOVID19_state in noCOVID19_list:\n",
-    "    print('\\n{} ...'.format(noCOVID19_state))"
+    "no_sars_cov2_list = list(set(list(India_statewise.state.values)) -set(list(sars_cov2_data.state)))\n",
+    "print('A total of: {} states with no reports of SARS-CoV2 cases ...'.format(len(no_sars_cov2_list)))\n",
+    "if len(no_sars_cov2_list) >= 1:\n",
+    "  print('\\nStates in India with no SARS-CoV2 case reports:')  \n",
+    "  for no_sars_cov2_state in no_sars_cov2_list:\n",
+    "    print('\\n{} ...'.format(no_sars_cov2_state))"
    ]
   },
   {
@@ -273,7 +273,7 @@
     "# Combine geographical and SARS-CoV2 statewise statistics\n",
     "\n",
     "\n",
-    "The function: ``` covid19_json(covid_df, geo_df) ``` combines the COVID19 dataframe and the GeoPandas dataframe. The output is a dictionary that returns: ```{'json_data': json_data, 'data_frame': merged_df}```"
+    "The function: ``` sars_cov2_json(covid_df, geo_df) ``` combines the SARS-CoV2 dataframe and the GeoPandas dataframe. The output is a dictionary that returns: ```{'json_data': json_data, 'data_frame': merged_df}```"
    ]
   },
   {
@@ -282,7 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def covid19_json(covid_df, geo_df,verbose=False):\n",
+    "def sars_cov2_json(covid_df, geo_df,verbose=False):\n",
     "    merged_df = pd.merge(geo_df, covid_df, on='state', how='left')\n",
     "\n",
     "    try:\n",
@@ -305,8 +305,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_data = covid19_json(covid19_data, India_statewise, verbose=True)\n",
+    "merged_data = sars_cov2_json(sars_cov2_data, India_statewise, verbose=True)\n",
     "merged_json = merged_data['json_data']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_data['data_frame'].head()"
    ]
   },
   {
@@ -588,8 +597,8 @@
     "  return plt\n",
     "\n",
     "    \n",
-    "def covid19_plot(\n",
-    "      covid19_geosource, \n",
+    "def sars_cov2_plot(\n",
+    "      sars_cov2_geosource, \n",
     "      input_df=None, \n",
     "      input_field=None,\n",
     "      color_field='total_cases', \n",
@@ -648,7 +657,7 @@
     "        \n",
     "  plt = geographic_overlay(\n",
     "          plt, \n",
-    "          geosourceJson=covid19_geosource,\n",
+    "          geosourceJson=sars_cov2_geosource,\n",
     "          colorBar=color_bar, \n",
     "          colorMapper=color_mapper, \n",
     "          colorMode=input_field,\n",
@@ -667,7 +676,7 @@
     "        state='Andaman and Nicobar Islands',\n",
     "        idx=i,\n",
     "        input_df=input_df,\n",
-    "        geosourceJson=covid19_geosource,\n",
+    "        geosourceJson=sars_cov2_geosource,\n",
     "        colorBar=color_bar, \n",
     "        colorMapper=color_mapper, \n",
     "        colorMode=input_field\n",
@@ -678,7 +687,7 @@
     "      state='Chandigarh',\n",
     "      idx=0,\n",
     "      input_df=input_df,\n",
-    "      geosourceJson=covid19_geosource,\n",
+    "      geosourceJson=sars_cov2_geosource,\n",
     "      colorBar=color_bar, \n",
     "      colorMapper=color_mapper, \n",
     "      colorMode=input_field\n",
@@ -690,7 +699,7 @@
     "        state='Dadra and Nagar Haveli and Daman and Diu',\n",
     "        idx=i,\n",
     "        input_df=input_df,\n",
-    "        geosourceJson=covid19_geosource,\n",
+    "        geosourceJson=sars_cov2_geosource,\n",
     "        colorBar=color_bar, \n",
     "        colorMapper=color_mapper, \n",
     "        colorMode=input_field\n",
@@ -701,7 +710,7 @@
     "      state='Delhi',\n",
     "      idx=0,\n",
     "      input_df=input_df,\n",
-    "      geosourceJson=covid19_geosource,\n",
+    "      geosourceJson=sars_cov2_geosource,\n",
     "      colorBar=color_bar, \n",
     "      colorMapper=color_mapper, \n",
     "      colorMode=input_field\n",
@@ -712,7 +721,7 @@
     "      state='Chandigarh',\n",
     "      idx=0,\n",
     "      input_df=input_df,\n",
-    "      geosourceJson=covid19_geosource,\n",
+    "      geosourceJson=sars_cov2_geosource,\n",
     "      colorBar=color_bar, \n",
     "      colorMapper=color_mapper, \n",
     "      colorMode=input_field\n",
@@ -723,7 +732,7 @@
     "      state='Lakshadweep',\n",
     "      idx=0,\n",
     "      input_df=input_df,\n",
-    "      geosourceJson=covid19_geosource,\n",
+    "      geosourceJson=sars_cov2_geosource,\n",
     "      colorBar=color_bar, \n",
     "      colorMapper=color_mapper, \n",
     "      colorMode=input_field\n",
@@ -735,7 +744,7 @@
     "            state='Puducherry',\n",
     "            idx=i,\n",
     "            input_df=input_df,\n",
-    "            geosourceJson=covid19_geosource,\n",
+    "            geosourceJson=sars_cov2_geosource,\n",
     "            colorBar=color_bar, \n",
     "            colorMapper=color_mapper, \n",
     "            colorMode=input_field\n",
@@ -774,17 +783,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "covid19_geosource = GeoJSONDataSource(geojson=merged_json)\n",
+    "sars_cov2_geosource = GeoJSONDataSource(geojson=merged_json)\n",
     "plot_title = 'SARS-CoV2 outbreak in India'\n",
     "app_title = 'SARS-CoV2 in India'\n",
     "\n",
-    "India_totalCases = covid19_data['total_cases'].sum()\n",
-    "India_totalDeaths = covid19_data['deaths'].sum()\n",
+    "India_totalCases = sars_cov2_data['total_cases'].sum()\n",
+    "India_totalDeaths = sars_cov2_data['deaths'].sum()\n",
     "print(India_totalCases)\n",
     "\n",
-    "basic_covid19_plot = covid19_plot(\n",
-    "                       covid19_geosource, \n",
-    "                       input_df=covid19_data,\n",
+    "basic_sars_cov2_plot = sars_cov2_plot(\n",
+    "                       sars_cov2_geosource, \n",
+    "                       input_df=sars_cov2_data,\n",
     "                       input_field='total_cases', \n",
     "                       color_field='total_cases',\n",
     "                       enable_IndiaStats=True, \n",
@@ -793,8 +802,8 @@
     "                     )\n",
     "\n",
     "curdoc().title=app_title\n",
-    "basic_covid19_layout = column(basic_covid19_plot)\n",
-    "curdoc().add_root(basic_covid19_layout)"
+    "basic_sars_cov2_layout = column(basic_sars_cov2_plot)\n",
+    "curdoc().add_root(basic_sars_cov2_layout)"
    ]
   },
   {
@@ -811,7 +820,7 @@
    "outputs": [],
    "source": [
     "output_notebook()\n",
-    "show(basic_covid19_layout)"
+    "show(basic_sars_cov2_layout)"
    ]
   },
   {
@@ -820,8 +829,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_file('India_COVID19.html')\n",
-    "save(basic_covid19_layout)"
+    "out_file('India_SARS_CoV2.html')\n",
+    "save(basic_sars_cov2_layout)"
    ]
   },
   {
