Updated SARS-CoV2 case statistics for 24th January 2026 ...

--- a/examples/Interactive_visualization_of_SARS_CoV2_in_India.ipynb
+++ b/examples/Interactive_visualization_of_SARS_CoV2_in_India.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -93,9 +93,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating SARS-CoV2 state-wise statistics overlay for India using Bokeh visualization library version:  3.8.1\n"
+     ]
+    }
+   ],
    "source": [
     "bokeh_version = bokeh.__version__\n",
     "print('Generating SARS-CoV2 state-wise statistics overlay for India using Bokeh visualization library version: ', bokeh_version)\n",
@@ -125,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,9 +152,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0               Jammu and Kashmir\n",
+       "1                          Ladakh\n",
+       "2     Andaman and Nicobar Islands\n",
+       "3                       Telangana\n",
+       "4                  Andhra Pradesh\n",
+       "5               Arunachal Pradesh\n",
+       "6                           Assam\n",
+       "7                           Bihar\n",
+       "8                      Chandigarh\n",
+       "9                    Chhattisgarh\n",
+       "10         Dadra and Nagar Haveli\n",
+       "11                  Daman and Diu\n",
+       "12                          Delhi\n",
+       "13                            Goa\n",
+       "14                        Gujarat\n",
+       "15                        Haryana\n",
+       "16               Himachal Pradesh\n",
+       "17                      Jharkhand\n",
+       "18                      Karnataka\n",
+       "19                         Kerala\n",
+       "20                    Lakshadweep\n",
+       "21                 Madhya Pradesh\n",
+       "22                    Maharashtra\n",
+       "23                        Manipur\n",
+       "24                      Meghalaya\n",
+       "25                        Mizoram\n",
+       "26                       Nagaland\n",
+       "27                         Odisha\n",
+       "28                     Puducherry\n",
+       "29                         Punjab\n",
+       "30                      Rajasthan\n",
+       "31                         Sikkim\n",
+       "32                     Tamil Nadu\n",
+       "33                        Tripura\n",
+       "34                  Uttar Pradesh\n",
+       "35                    Uttarakhand\n",
+       "36                    West Bengal\n",
+       "Name: state, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "India_statewise['state']"
    ]
@@ -168,9 +224,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jammu and Kashmir</td>\n",
+       "      <td>POLYGON ((8248815.186 4158474.46, 8267604.32 4...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ladakh</td>\n",
+       "      <td>POLYGON ((8548889.055 3905752.225, 8536723.949...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Andaman and Nicobar Islands</td>\n",
+       "      <td>MULTIPOLYGON (((10298818.467 1212439.225, 1030...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Telangana</td>\n",
+       "      <td>POLYGON ((8935333.898 2108061.096, 8943036.679...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Andhra Pradesh</td>\n",
+       "      <td>POLYGON ((8628301.07 1783835.012, 8660560.315 ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         state  \\\n",
+       "0            Jammu and Kashmir   \n",
+       "1                       Ladakh   \n",
+       "2  Andaman and Nicobar Islands   \n",
+       "3                    Telangana   \n",
+       "4               Andhra Pradesh   \n",
+       "\n",
+       "                                            geometry  \n",
+       "0  POLYGON ((8248815.186 4158474.46, 8267604.32 4...  \n",
+       "1  POLYGON ((8548889.055 3905752.225, 8536723.949...  \n",
+       "2  MULTIPOLYGON (((10298818.467 1212439.225, 1030...  \n",
+       "3  POLYGON ((8935333.898 2108061.096, 8943036.679...  \n",
+       "4  POLYGON ((8628301.07 1783835.012, 8660560.315 ...  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "India_statewise = India_statewise.to_crs('EPSG:3395')\n",
     "India_statewise.head()"
